<resources>
    <string name="app_name">Players</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anonymous User</string>
    <string name="nav_header_subtitle">Click to login</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_players">Players</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_team_details">Team Details</string>
    <string name="menu_team_info">Team Info</string>
    <string name="menu_create_player">Create Player</string>
    <string name="menu_create_team">Create Team</string>
    <string name="menu_add_players_to_team">Add Players to Team</string>
    <string name="menu_player_details">Player Details</string>
    <string name="menu_create_event">Event</string>
    <string name="menu_edit_event">Edit Event</string>
    <string name="menu_event_details">Event Details</string>
    <string name="menu_create_points">Points</string>
    <string name="menu_player_stats">Player Stats</string>

    <string name="title_edit_player">Edit Player</string>
    <string name="title_edit_team">Edit Team</string>

    <string name="team_stats">Team Stats</string>
    <string name="team_title">Team</string>
    <string name="player_title">Player</string>
    <string name="today">Today</string>
    <string name="finished">Finished Tournament</string>
    <string name="next">Next</string>
    <string name="selected_colors">Selected Colors</string>
    <string name="selected_players_count">Selected players count:</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="birth_date">Birth date</string>
    <string name="team">Team</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="value_not_set">Not set</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="add_players">Add Players</string>
    <string name="add_player">Add Player</string>
    <string name="calendar_stats">Calendar Stats</string>

    <string name="page_general">General</string>
    <string name="page_events">Events</string>
    <string name="page_common_stats">Common Stats</string>
    <string name="all">All</string>
    <string name="page_trainings">Trainings</string>
    <string name="page_stats_last_20">Last 20</string>
    <string name="page_stats_last_10">Last 10</string>
    <string name="page_players">Players</string>

    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_done">Done</string>
    <string name="event_action_points">Points</string>

    <string name="player_delete_query">Are you sure you want to delete this player?</string>
    <string name="player_delete_message">To delete this player type code and confirm.</string>
    <string name="player_delete_not_possible">This player exist in events.</string>

    <string name="mandatory">Mandatory</string>
    <string name="optional">Optional</string>

    <string name="type_code">Retype above code</string>
    <string name="delete_event_query">Are you sure you want to delete this event?</string>
    <string name="delete_event_message">To delete this event type code and confirm.</string>
    <string name="confirm">Confirm</string>
    <string name="no_players_title">No Players</string>
    <string name="no_players_subtitle">You haven\'t add any players to this team.\nPlease add players to begin\nworking with the team\nor delete this team.</string>

    <string name="team_delete_query">Are you sure you want to delete this team?</string>
    <string name="team_delete_message">To delete this team type code and confirm.</string>

    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by \'name\'</string>
    <string name="sort_by_age">Sort by \'age\'</string>
    <string name="group_by_age">Group by \'age\'</string>

    <string name="players_count">%d players</string>
    <string name="trainings">Training</string>
    <string name="friendlies">Friendlies</string>
    <string name="games">Friendlies</string>
    <string name="filter_stats">Filter Stats</string>
    <string name="filter">Filter</string>

    <string name="commentary">Commentary</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="create">Create</string>

</resources>
