<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_teams">

    <fragment
        android:id="@+id/nav_teams"
        android:name="com.morcinek.players.ui.teams.TeamsFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_nav_teams_to_team_info"
            app:destination="@id/team_info" />
        <action
            android:id="@+id/action_nav_teams_to_nav_team_details"
            app:destination="@id/nav_team_details"
            app:popUpTo="@id/nav_teams"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_players"
        android:name="com.morcinek.players.ui.team.PlayersFragment"
        android:label="@string/menu_players"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_nav_players_to_nav_player_details"
            app:destination="@id/nav_player_details"/>
        <action
            android:id="@+id/action_nav_players_to_nav_create_player"
            app:destination="@id/nav_create_player"/>
    </fragment>

    <fragment
        android:id="@+id/nav_player_details"
        android:name="com.morcinek.players.ui.players.PlayerDetailsFragment"
        android:label="@string/menu_player_details"
        tools:layout="@layout/fragment_player" >
        <action
            android:id="@+id/action_nav_player_details_to_nav_edit_player"
            app:destination="@id/nav_edit_player" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_player"
        android:name="com.morcinek.players.ui.players.CreatePlayerFragment"
        android:label="@string/menu_create_player"
        tools:layout="@layout/fragment_create_player" />

    <fragment
        android:id="@+id/nav_edit_player"
        android:name="com.morcinek.players.ui.players.CreatePlayerFragment"
        android:label="@string/title_edit_player"
        tools:layout="@layout/fragment_create_player" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.morcinek.players.ui.team.EventsFragment"
        android:label="@string/page_events"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_nav_events_to_nav_create_event"
            app:destination="@id/nav_create_event" />
        <action
            android:id="@+id/action_nav_events_to_nav_event_details"
            app:destination="@id/nav_event_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_event"
        android:name="com.morcinek.players.ui.teams.event.CreateEventFragment"
        android:label="@string/menu_create_event"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/nav_event_details"
        android:name="com.morcinek.players.ui.teams.event.EventDetailsFragment"
        android:label="@string/menu_event_details"
        tools:layout="@layout/fragment_event_details" />

    <fragment
        android:id="@+id/nav_team_stats"
        android:name="com.morcinek.players.ui.team.TeamStatsFragment"
        android:label="@string/team_stats"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/team_info"
        android:name="com.morcinek.players.ui.teams.TeamInfoFragment"
        android:label="@string/menu_team_info"
        tools:layout="@layout/fragment_team_info">
        <argument
            android:name="com.morcinek.players.core.data.TeamData"
            app:argType="com.morcinek.players.core.data.TeamData" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_team"
        android:name="com.morcinek.players.ui.teams.CreateTeamFragment"
        android:label="@string/menu_create_team"
        tools:layout="@layout/fragment_create_team" />

    <fragment
        android:id="@+id/nav_edit_team"
        android:name="com.morcinek.players.ui.teams.CreateTeamFragment"
        android:label="@string/title_edit_team"
        tools:layout="@layout/fragment_create_team" />

    <fragment
        android:id="@+id/nav_team_details"
        android:name="com.morcinek.players.ui.teams.TeamDetailsFragment"
        tools:layout="@layout/fragment_team_details"/>

    <fragment
        android:id="@+id/nav_add_players_to_team"
        android:name="com.morcinek.players.ui.teams.AddPlayersFragment"
        android:label="@string/menu_add_players_to_team"
        tools:layout="@layout/fragment_add_players" />

    <fragment
        android:id="@+id/nav_edit_event"
        android:name="com.morcinek.players.ui.teams.event.CreateEventFragment"
        android:label="@string/menu_edit_event"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/nav_create_points"
        android:name="com.morcinek.players.ui.teams.event.CreatePointsFragment"
        android:label="@string/menu_create_points"
        tools:layout="@layout/fragment_create_points" />

    <fragment
        android:id="@+id/nav_player_stats"
        android:name="com.morcinek.players.ui.teams.stats.PlayerStatsFragment"
        android:label="@string/menu_player_stats"
        tools:layout="@layout/fragment_player_stats" />
</navigation>