<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            style="@style/DefaultTextInputLayout"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                style="@style/DefaultEditText"
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameTextInputLayout"
            style="@style/DefaultTextInputLayout"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout">

        <EditText
                style="@style/DefaultEditText"
                android:hint="@string/surname_hint"
                android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/double_margin"
            app:layout_constraintTop_toBottomOf="@id/surnameTextInputLayout">

        <TextView
                style="@style/ButtonHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_date" />

        <TextView
                android:id="@+id/birthDateButton"
                style="@style/DefaultEditText"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/value_not_set" />
    </LinearLayout>

    <TextView
            android:id="@+id/nextButton"
            style="@style/BigButton.AccentTheme"
            android:layout_width="@dimen/next_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_margin"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>