<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/lightGray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            style="@style/TitleText"
            android:id="@+id/title"
            android:layout_marginBottom="@dimen/triple_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_players_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/subtitle"/>

    <TextView
            style="@style/SubtitleText"
            android:id="@+id/subtitle"
            android:layout_marginBottom="@dimen/triple_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/quad_margin"
            android:text="@string/no_players_subtitle"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/addPlayerButton"/>


    <TextView
            android:id="@+id/addPlayerButton"
            style="@style/BigButton.AccentTheme"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_player"
            android:drawableStart="@drawable/ic_person_add"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintBottom_toTopOf="@id/deleteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/deleteButton"
            style="@style/BigButton.AccentTheme"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/action_delete"
            android:drawableStart="@drawable/ic_delete"
            app:layout_constraintTop_toBottomOf="@id/addPlayerButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>