<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:paddingLeft="@dimen/one_half_margin"
    android:paddingTop="36dp"
    android:paddingRight="@dimen/one_half_margin"
    android:paddingBottom="@dimen/one_half_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:orientation="vertical">

        <TextView
            android:id="@+id/navHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_std"
            tools:text="@string/nav_header_title" />

        <TextView
            android:id="@+id/navHeaderSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white80"
            android:textSize="@dimen/font_small"
            tools:text="@string/nav_header_subtitle" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/margin"
        android:src="@drawable/ic_logout"
        android:textColor="@color/black"
        android:textStyle="bold" />

</RelativeLayout>
